bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Erreur de compilation :
MonkeyTrouble:2: error: not found: value asmile
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = { return ((asmile && bsmile ) || ((!asmile) && (!bsmile) ))
                                                                        ^MonkeyTrouble:2: error: not found: value bsmile
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = { return ((asmile && bsmile ) || ((!asmile) && (!bsmile) ))
                                                                                  ^MonkeyTrouble:2: error: not found: value asmile
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = { return ((asmile && bsmile ) || ((!asmile) && (!bsmile) ))
                                                                                                 ^MonkeyTrouble:2: error: not found: value bsmile
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = { return ((asmile && bsmile ) || ((!asmile) && (!bsmile) ))
                                                                                                              ^